[gd_scene load_steps=9 format=3 uid="uid://ctj74vbcaty57"]

[ext_resource type="Script" path="res://scenes/world_a.gd" id="1_sjmoy"]
[ext_resource type="TileSet" uid="uid://bwswotaye5a6o" path="res://tilemaps/world_a.tres" id="2_h13vj"]
[ext_resource type="PackedScene" uid="uid://dkrb6rqrntnr6" path="res://scenes/player.tscn" id="3_abf2x"]
[ext_resource type="PackedScene" uid="uid://b24c61klgvpes" path="res://scenes/snow_generator.tscn" id="4_1ht83"]
[ext_resource type="PackedScene" uid="uid://o8y3se2tyr48" path="res://scenes/enemy.tscn" id="5_g8uk3"]
[ext_resource type="Shader" path="res://shaders/fog2.gdshader" id="6_oxtps"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_urpky"]
shader = ExtResource("6_oxtps")
shader_parameter/color = Color(0.411224, 0.444704, 0.540812, 1)
shader_parameter/OCTAVES = 4
shader_parameter/enable_pixelation = true
shader_parameter/pixelation_amount = 150
shader_parameter/fog_direction = Vector2(1, 1)
shader_parameter/scroll_noise_tex = false
shader_parameter/noise_scroll_direction = Vector2(1, 0)
shader_parameter/scroll_speed = 0.84

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kw1wb"]
size = Vector2(40, 20)

[node name="world_a" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_sjmoy")

[node name="TileMap" type="TileMap" parent="."]
y_sort_enabled = true
tile_set = ExtResource("2_h13vj")
format = 2
layer_0/name = "ground"
layer_0/tile_data = PackedInt32Array(0, 983047, 0, 65536, 983047, 1, 131072, 983047, 2, 1, 1048583, 0, 65537, 1048583, 1, 131073, 1048583, 2, 2, 1114119, 0, 65538, 1114119, 1, 131074, 1114119, 2, 196608, 983047, 0, 262144, 983047, 1, 327680, 983047, 2, 196609, 1048583, 0, 262145, 1048583, 1, 327681, 1048583, 2, 196610, 1114119, 0, 262146, 1114119, 1, 327682, 1114119, 2, 393216, 983047, 0, 458752, 983047, 1, 524288, 983047, 2, 393217, 1048583, 0, 458753, 1048583, 1, 524289, 1048583, 2, 393218, 1114119, 0, 458754, 1114119, 1, 524290, 1114119, 2, 589824, 983047, 0, 655360, 983047, 1, 720896, 983047, 2, 589825, 1048583, 0, 655361, 1048583, 1, 720897, 1048583, 2, 589826, 1114119, 0, 655362, 1114119, 1, 720898, 1114119, 2, 3, 983047, 0, 65539, 983047, 1, 131075, 983047, 2, 4, 1048583, 0, 65540, 1048583, 1, 131076, 1048583, 2, 5, 1114119, 0, 65541, 1114119, 1, 131077, 1114119, 2, 6, 983047, 0, 65542, 983047, 1, 131078, 983047, 2, 7, 1048583, 0, 65543, 1048583, 1, 131079, 1048583, 2, 8, 1114119, 0, 65544, 1114119, 1, 131080, 1114119, 2, 9, 983047, 0, 65545, 983047, 1, 131081, 983047, 2, 10, 1048583, 0, 65546, 1048583, 1, 131082, 1048583, 2, 11, 1114119, 0, 65547, 1114119, 1, 131083, 1114119, 2, 12, 983047, 0, 65548, 983047, 1, 131084, 983047, 2, 13, 1048583, 0, 65549, 1048583, 1, 131085, 1048583, 2, 14, 1114119, 0, 65550, 1114119, 1, 131086, 1114119, 2, 15, 983047, 0, 65551, 983047, 1, 131087, 983047, 2, 16, 1048583, 0, 65552, 1048583, 1, 131088, 1048583, 2, 17, 1114119, 0, 65553, 1114119, 1, 131089, 1114119, 2, 18, 983047, 0, 65554, 983047, 1, 131090, 983047, 2, 19, 1048583, 0, 65555, 1048583, 1, 131091, 1048583, 2, 20, 1114119, 0, 65556, 1114119, 1, 131092, 1114119, 2, 196611, 983047, 0, 262147, 983047, 1, 327683, 983047, 2, 196612, 1048583, 0, 262148, 1048583, 1, 327684, 1048583, 2, 196613, 1114119, 0, 262149, 1114119, 1, 327685, 1114119, 2, 196614, 983047, 0, 262150, 983047, 1, 327686, 983047, 2, 196615, 1048583, 0, 262151, 1048583, 1, 327687, 1048583, 2, 196616, 1114119, 0, 262152, 1114119, 1, 327688, 1114119, 2, 196617, 983047, 0, 262153, 983047, 1, 327689, 983047, 2, 196618, 1048583, 0, 262154, 1048583, 1, 327690, 1048583, 2, 196619, 1114119, 0, 262155, 1114119, 1, 327691, 1114119, 2, 196620, 983047, 0, 262156, 983047, 1, 327692, 983047, 2, 196621, 1048583, 0, 262157, 1048583, 1, 327693, 1048583, 2, 196622, 1114119, 0, 262158, 1114119, 1, 327694, 1114119, 2, 196623, 983047, 0, 262159, 983047, 1, 327695, 983047, 2, 196624, 1048583, 0, 262160, 1048583, 1, 327696, 1048583, 2, 196625, 1114119, 0, 262161, 1114119, 1, 327697, 1114119, 2, 196626, 983047, 0, 262162, 983047, 1, 327698, 983047, 2, 196627, 1048583, 0, 262163, 1048583, 1, 327699, 1048583, 2, 196628, 1114119, 0, 262164, 1114119, 1, 327700, 1114119, 2, 196629, 983047, 0, 262165, 983047, 1, 327701, 983047, 2, 196630, 1048583, 0, 262166, 1048583, 1, 327702, 1048583, 2, 196631, 983047, 0, 262167, 983047, 1, 327703, 983047, 2, 196632, 1048583, 0, 262168, 1048583, 1, 327704, 1048583, 2, 196633, 1114119, 0, 262169, 1114119, 1, 327705, 1114119, 2, 23, 1114119, 0, 65559, 1114119, 1, 131095, 1114119, 2, 24, 1048583, 0, 65560, 1048583, 1, 131096, 1048583, 2, 25, 1114119, 0, 65561, 1114119, 1, 131097, 1114119, 2, 21, 983047, 0, 65557, 983047, 1, 131093, 983047, 2, 22, 1048583, 0, 65558, 1048583, 1, 131094, 1048583, 2, 393219, 983047, 0, 458755, 983047, 1, 524291, 983047, 2, 393220, 1048583, 0, 458756, 1048583, 1, 524292, 1048583, 2, 393221, 1114119, 0, 458757, 1114119, 1, 524293, 1114119, 2, 393222, 983047, 0, 458758, 983047, 1, 524294, 983047, 2, 393223, 1048583, 0, 458759, 1048583, 1, 524295, 1048583, 2, 393224, 1114119, 0, 458760, 1114119, 1, 524296, 1114119, 2, 393225, 983047, 0, 458761, 983047, 1, 524297, 983047, 2, 393226, 1048583, 0, 458762, 1048583, 1, 524298, 1048583, 2, 393227, 1114119, 0, 458763, 1114119, 1, 524299, 1114119, 2, 393228, 983047, 0, 458764, 983047, 1, 524300, 983047, 2, 393229, 1048583, 0, 458765, 1048583, 1, 524301, 1048583, 2, 393230, 1114119, 0, 458766, 1114119, 1, 524302, 1114119, 2, 393231, 983047, 0, 458767, 983047, 1, 524303, 983047, 2, 393232, 1048583, 0, 458768, 1048583, 1, 524304, 1048583, 2, 393233, 1114119, 0, 458769, 1114119, 1, 524305, 1114119, 2, 393234, 983047, 0, 458770, 983047, 1, 524306, 983047, 2, 393235, 1048583, 0, 458771, 1048583, 1, 524307, 1048583, 2, 393236, 1114119, 0, 458772, 1114119, 1, 524308, 1114119, 2, 393237, 983047, 0, 458773, 983047, 1, 524309, 983047, 2, 393238, 1048583, 0, 458774, 1048583, 1, 524310, 1048583, 2, 393239, 983047, 0, 458775, 983047, 1, 524311, 983047, 2, 589827, 983047, 0, 655363, 983047, 1, 720899, 983047, 2, 589828, 1048583, 0, 655364, 1048583, 1, 720900, 1048583, 2, 589829, 1114119, 0, 655365, 1114119, 1, 720901, 1114119, 2, 589830, 983047, 0, 655366, 983047, 1, 720902, 983047, 2, 589831, 1048583, 0, 655367, 1048583, 1, 720903, 1048583, 2, 589832, 1114119, 0, 655368, 1114119, 1, 720904, 1114119, 2, 589833, 983047, 0, 655369, 983047, 1, 720905, 983047, 2, 589834, 1048583, 0, 655370, 1048583, 1, 720906, 1048583, 2, 589835, 1114119, 0, 655371, 1114119, 1, 720907, 1114119, 2, 589839, 983047, 0, 655375, 983047, 1, 720911, 983047, 2, 589840, 1048583, 0, 655376, 1048583, 1, 720912, 1048583, 2, 589841, 1114119, 0, 655377, 1114119, 1, 720913, 1114119, 2, 589842, 983047, 0, 655378, 983047, 1, 720914, 983047, 2, 589843, 1048583, 0, 655379, 1048583, 1, 720915, 1048583, 2, 589844, 1114119, 0, 655380, 1114119, 1, 720916, 1114119, 2, 589845, 983047, 0, 655381, 983047, 1, 720917, 983047, 2, 589846, 1048583, 0, 655382, 1048583, 1, 720918, 1048583, 2, 589847, 983047, 0, 655383, 983047, 1, 720919, 983047, 2, 589836, 983047, 0, 655372, 983047, 1, 720908, 983047, 2, 589837, 1048583, 0, 655373, 1048583, 1, 720909, 1048583, 2, 589838, 1114119, 0, 655374, 1114119, 1, 720910, 1114119, 2, 589848, 1048583, 0, 655384, 1048583, 1, 720920, 1048583, 2, 589849, 1114119, 0, 655385, 1114119, 1, 720921, 1114119, 2, 393240, 1048583, 0, 458776, 1048583, 1, 524312, 1048583, 2, 393241, 1114119, 0, 458777, 1114119, 1, 524313, 1114119, 2)
layer_1/name = "road"
layer_1/tile_data = PackedInt32Array(65536, 589831, 7, 131072, 786439, 7, 196608, 786439, 1, 262144, 131079, 10, 131073, 851975, 7, 196609, 1245191, 11, 262145, 458759, 10, 262146, 393223, 9, 262147, 786439, 1, 327683, 65543, 9, 393219, 7, 13, 327684, 786439, 1, 393220, 786439, 1, 196610, 524295, 7, 327685, 786439, 1, 458757, 786439, 1, 524293, 786439, 1, 393221, 786439, 1, 589829, 1507335, 15, 589830, 1245191, 15, 589831, 1310727, 15, 589832, 65543, 14, 589833, 786439, 1, 589834, 786439, 1, 589835, 786439, 1, 589836, 786439, 1, 589837, 786439, 1, 589838, 786439, 1, 524295, 786439, 1, 524294, 786439, 1, 524296, 786439, 1, 524297, 786439, 1, 524298, 786439, 1, 524299, 786439, 1, 589839, 786439, 1, 524303, 786439, 1, 458767, 786439, 1, 458768, 262151, 8, 393232, 524295, 9, 327696, 786439, 1, 327697, 786439, 1, 327698, 786439, 1, 327699, 786439, 1, 393235, 786439, 1, 458771, 786439, 1, 458772, 786439, 1, 524308, 786439, 1, 589844, 786439, 1, 589845, 786439, 1, 589846, 786439, 1, 589847, 786439, 1, 589848, 786439, 1, 589849, 786439, 1, 458763, 458759, 6, 458764, 524295, 6, 524300, 196615, 7, 262166, 983047, 20, 327702, 983047, 21, 262167, 1048583, 20, 327703, 1048583, 21, 262168, 1114119, 20, 327704, 1114119, 21, 262148, 196615, 12, 262149, 131079, 11, 262150, 589831, 7, 327686, 262151, 8, 393222, 262151, 8, 458758, 524295, 7, 196611, 458759, 6, 196612, 262151, 7, 327682, 7, 9, 458756, 65543, 14, 458755, 7, 14, 458766, 7, 13, 393230, 7, 12, 393231, 65543, 12, 262159, 65543, 11, 262160, 131079, 11, 262161, 131079, 11, 327695, 7, 13, 524301, 458759, 6, 524302, 393223, 7, 458761, 131079, 6, 458762, 458759, 6, 458759, 983047, 12, 458760, 1048583, 12, 524292, 7, 8, 589828, 1441799, 15, 655368, 65543, 15, 655369, 131079, 15, 655370, 196615, 15, 655371, 65543, 15, 655372, 458759, 10, 655373, 524295, 10, 655374, 65543, 15, 655375, 131079, 15, 655376, 196615, 15, 589840, 196615, 14, 524304, 589831, 8, 393233, 131079, 10, 262162, 458759, 6, 262163, 131079, 6, 262164, 196615, 6, 393234, 65543, 9, 458770, 7, 8, 524306, 7, 14, 524307, 65543, 14, 589843, 327687, 8, 655379, 327687, 9, 655380, 458759, 10, 655381, 131079, 10, 327700, 589831, 8, 393236, 196615, 7, 393237, 262151, 7, 458773, 262151, 8, 524309, 196615, 12, 524310, 131079, 6, 524311, 458759, 6, 524312, 458759, 6, 524313, 1048583, 6, 655382, 131079, 15, 655384, 458759, 10, 655385, 1572871, 9, 655383, 131079, 10, 655361, 524295, 15, 720897, 524295, 16, 655362, 589831, 15, 720898, 589831, 16, 458769, 131079, 18, 458765, 65543, 16, 327687, 262151, 10, 393223, 262151, 11, 327688, 327687, 10, 393224, 327687, 11, 65538, 655367, 10, 131074, 655367, 11, 65539, 720903, 10, 131075, 720903, 11, 65540, 786439, 10, 131076, 786439, 11, 65541, 851975, 10, 131077, 851975, 11, 10, 393223, 11, 65546, 393223, 12, 11, 458759, 11, 65547, 458759, 12)
layer_2/name = "cliff"
layer_2/tile_data = PackedInt32Array(12, 196615, 1, 13, 7, 3, 65549, 65543, 5, 14, 131079, 4, 65550, 131079, 5, 15, 65543, 3, 65551, 65543, 4, 131087, 65543, 5, 65552, 131079, 4, 131088, 131079, 5, 65553, 131079, 4, 131089, 131079, 5, 65554, 131079, 4, 131090, 131079, 5, 65555, 131079, 4, 131091, 131079, 5, 65556, 131079, 4, 131092, 131079, 5, 65557, 131079, 4, 131093, 131079, 5, 65558, 131079, 4, 131094, 131079, 5, 65559, 131079, 4, 131095, 131079, 5, 65560, 131079, 4, 131096, 131079, 5, 65561, 131079, 4, 131097, 131079, 5)
layer_3/name = "ysort"
layer_3/y_sort_enabled = true
layer_3/tile_data = PackedInt32Array(65537, 1376260, 17, 327681, 1769476, 16, 655366, 2424836, 18, 65544, 2424836, 15, 393227, 1376260, 19, 262158, 2031620, 18, 720914, 1638404, 17, 196628, 2424836, 18, 393239, 1769476, 16, 196614, 1507332, 19)

[node name="player" parent="." instance=ExtResource("3_abf2x")]
y_sort_enabled = true
position = Vector2(176, 16)

[node name="SnowGenerator" parent="." instance=ExtResource("4_1ht83")]
z_index = 3
position = Vector2(187, -24)

[node name="enemy" parent="." instance=ExtResource("5_g8uk3")]
position = Vector2(273, 108)

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
layer = 2

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
z_index = 1
motion_mirroring = Vector2(1152, 648)

[node name="ColorRect" type="ColorRect" parent="ParallaxBackground"]
material = SubResource("ShaderMaterial_urpky")
offset_right = 1152.0
offset_bottom = 648.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="collisions" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="collisions"]
polygon = PackedVector2Array(0, 0, 0, 192, 416, 192, 416, 0, 196, 0, 196, -13, 430, -12, 426, 207, -17, 203, -18, -22, 156, -13, 156, 0)

[node name="cliffside_transition_point" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="cliffside_transition_point"]
position = Vector2(176, -10)
shape = SubResource("RectangleShape2D_kw1wb")

[connection signal="body_entered" from="cliffside_transition_point" to="." method="_on_cliffside_transition_point_body_entered"]
[connection signal="body_exited" from="cliffside_transition_point" to="." method="_on_cliffside_transition_point_body_exited"]
